--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Hidden Search</title>
 </head>
 <body>
+  <div class="search">
+    <input type="text" class="input" placeholder="search...">
+    <button class="btn">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
 
   <script src="./assets/main.js"></script>
 </body>
